krackattacks: use new testing commands of hostap

--- a/hostapd/hostapd.conf
+++ b/hostapd/hostapd.conf
@@ -5,7 +5,7 @@
 # management frames with the Host AP driver); wlan0 with many nl80211 drivers
 # Note: This attribute can be overridden by the values supplied with the '-i'
 # command line parameter.
-interface=wlan0
+interface=wlp0s20u2
 
 # In case of atheros and nl80211 driver interfaces, an additional
 # configuration parameter, bridge, may be used to notify hostapd if the
@@ -1305,7 +1305,7 @@ rsn_pairwise=CCMP
 # This defaults to 86400 seconds (once per day) when using CCMP/GCMP as the
 # group cipher and 600 seconds (once per 10 minutes) when using TKIP as the
 # group cipher.
-#wpa_group_rekey=86400
+wpa_group_rekey=8640000
 
 # Rekey GTK when any STA that possesses the current GTK is leaving the BSS.
 # (dot11RSNAConfigGroupRekeyStrict)
