--- a/hostapd/Makefile
+++ b/hostapd/Makefile
@@ -32,7 +32,7 @@ export BINDIR ?= /usr/local/bin/
 ifndef CONFIG_NO_GITVER
 # Add VERSION_STR postfix for builds from a git repository
 ifeq ($(wildcard ../.git),../.git)
-GITVER := $(shell git describe --dirty=+)
+GITVER := $(shell git describe --dirty=+ --tags)
 ifneq ($(GITVER),)
 CFLAGS += -DGIT_VERSION_STR_POSTFIX=\"-$(GITVER)\"
 endif
